--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,8 +12,13 @@ steps:
            '--build-arg', 'PACKER_VERSION_SHA256SUM=${_PACKER_VERSION_SHA256SUM}',
            '.']
   #download wizcli
-  - name: 'gcr.io/cloud-builders/curl -Lo wizcli'
-    args: ["https://wizcli.app.wiz.io/latest/wizcli-linux-amd64"]
+  - name: 'gcr.io/cloud-builders/gloud'
+    entrypoint: "bash"
+    args: 
+    - |
+      curl -Lo wizcli https://wizcli.app.wiz.io/latest/wizcli-linux-amd64) &&
+      chmod +x wizcli
+       
   - name: 'gcr.io/cloud-builders/chmod'
     args: ["+x wizcli"]
 
