--- a/test.yaml
+++ b/test.yaml
@@ -1,11 +1,11 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
+- name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: 'bash'
-  args: ['-c', 'docker login --username=$$USERNAME --password=$$PASSWORD']
-  secretEnv: ['USERNAME', 'PASSWORD']
+  args: ['-c', './wizcli auth --id= $$WIZ_CLIENT_ID --secret=$$WIZ_CLIENT_SECRET']
+  secretEnv: ['WIZ_CLIENT_ID', 'WIZ_CLIENT_SECRET']
 availableSecrets:
   secretManager:
   - versionName: projects/$PROJECT_ID/secrets/WIZ_CLIENT_SECRET/versions/1
-    env: 'PASSWORD'
+    env: 'WIZ_CLIENT_SECRET'
   - versionName: projects/$PROJECT_ID/secrets/WIZ_CLIENT_ID/versions/1
-    env: 'USERNAME'
+    env: 'WIZ_CLIENT_ID'
