--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -26,11 +26,8 @@ steps:
     - |
        chmod +x wizcli 
    #secret manager
-  - name: gcr.io/cloud-builders/gcloud
-    entrypoint: "bash"
-    args: ['-c', 'export WIZ_ENV=demo']
-  - name: gcr.io/cloud-builders/gcloud
-    entrypoint: "bash"
+  - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: 'bash'
     args: ['-c', './wizcli auth --id= $$WIZ_CLIENT_ID --secret=$$WIZ_CLIENT_SECRET']
     secretEnv: ['WIZ_CLIENT_ID', 'WIZ_CLIENT_SECRET']
   availableSecrets:
