--- a/test.yaml
+++ b/test.yaml
@@ -1,4 +1,27 @@
 steps:
+  - name: 'gcr.io/cloud-builders/wget'
+    args: ["https://releases.hashicorp.com/packer/${_PACKER_VERSION}/packer_${_PACKER_VERSION}_linux_amd64.zip"]
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/packer:${_PACKER_VERSION}',
+           '-t', 'gcr.io/$PROJECT_ID/packer',
+           '--build-arg', 'PACKER_VERSION=${_PACKER_VERSION}',
+           '--build-arg', 'PACKER_VERSION_SHA256SUM=${_PACKER_VERSION_SHA256SUM}',
+           '.']
+  #download wizcli
+  - name: gcr.io/cloud-builders/gcloud
+    entrypoint: "bash"
+    args:
+    - "-c"
+    - |
+       curl -Lo wizcli https://wizcli.app.wiz.io/latest/wizcli-linux-amd64
+   #chmod
+  - name: gcr.io/cloud-builders/gcloud
+    entrypoint: "bash"
+    args:
+    - "-c"
+    - |
+       chmod +x wizcli 
+   #secret manager
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: 'bash'
   args: ['-c', './wizcli auth --id= $$WIZ_CLIENT_ID --secret=$$WIZ_CLIENT_SECRET']
