--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -34,7 +34,7 @@ steps:
      export WIZ_ENV=demo 
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: 'bash'
-  args: ['-c', './wizcli auth --id=$$WIZ_CLIENT_ID --secret=$$WIZ_CLIENT_SECRET']
+  args: ['-c', './wizcli auth --id $$WIZ_CLIENT_ID --secret $$WIZ_CLIENT_SECRET']
   secretEnv: ['WIZ_CLIENT_ID', 'WIZ_CLIENT_SECRET']
 availableSecrets:
   secretManager:
