--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -26,21 +26,21 @@ steps:
   - |
      chmod +x wizcli 
    #secret manager
-- name: gcr.io/cloud-builders/gcloud
-  entrypoint: "bash"
-  args:
-  - "-c"
-  - |
-     export WIZ_ENV=demo 
+# - name: gcr.io/cloud-builders/gcloud
+#   entrypoint: "bash"
+#   args:
+#   - "-c"
+#   - |
+#      export WIZ_ENV=demo 
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: 'bash'
   args: ['-c', './wizcli auth --id $$WIZ_CLIENT_ID --secret $$WIZ_CLIENT_SECRET']
   secretEnv: ['WIZ_CLIENT_ID', 'WIZ_CLIENT_SECRET']
 availableSecrets:
   secretManager:
-  - versionName: projects/$PROJECT_ID/secrets/WIZ_CLIENT_SECRET/versions/1
+  - versionName: projects/$PROJECT_ID/secrets/WIZ_CLIENT_SECRET/versions/2
     env: 'WIZ_CLIENT_SECRET'
-  - versionName: projects/$PROJECT_ID/secrets/WIZ_CLIENT_ID/versions/1
+  - versionName: projects/$PROJECT_ID/secrets/WIZ_CLIENT_ID/versions/2
     env: 'WIZ_CLIENT_ID' 
 substitutions:
   _PACKER_VERSION: 1.9.1
