--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -42,6 +42,12 @@ availableSecrets:
     env: 'WIZ_CLIENT_SECRET'
   - versionName: projects/$PROJECT_ID/secrets/WIZ_CLIENT_ID/versions/2
     env: 'WIZ_CLIENT_ID' 
+- name: gcr.io/cloud-builders/gcloud
+  entrypoint: "bash"
+  args:
+  - "-c"
+  - |
+     ./wizcli docker scan --image gcr.io/$PROJECT_ID/packer:${_PACKER_VERSION} 
 substitutions:
   _PACKER_VERSION: 1.9.1
   _PACKER_VERSION_SHA256SUM: 793ed62255b9e572eda0c77d2a770f5fde501314b7598320786f1e51feb260d6
