--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -42,6 +42,7 @@ availableSecrets:
     env: 'WIZ_CLIENT_SECRET'
   - versionName: projects/$PROJECT_ID/secrets/WIZ_CLIENT_ID/versions/2
     env: 'WIZ_CLIENT_ID'
+#Scan image
 - name: gcr.io/cloud-builders/gcloud
   entrypoint: "bash"
   args:
